more detailed methods

--- a/chapter2.tex
+++ b/chapter2.tex
@@ -2,7 +2,7 @@
 \chapter[Expanding the atlas of human disease variants]{Expanding the atlas of variant effects in human disease genes}
 \label{ch:data2}
 
-As in the previous chapter, the work described here is the result of a team effort including multiple members of the Roth Lab as well as other collaborators. Wet lab procedures were executed by Marta Verby, Song Sun, Atina Co\'te and Jennifer Knapp, while computational aspects of the work were developed and implemented by myself, except where indicated otherwise.
+As in the previous chapter, the work described here is the result of a team effort including multiple members of the Roth Lab as well as other collaborators. Wet lab procedures were executed by Marta Verby, Song Sun, Atina Cot\'e and Jennifer Knapp, while computational aspects of the work were developed and implemented by myself, except where indicated otherwise.
 
 \section{Introduction}
 
@@ -317,7 +317,7 @@ A key requirement for DMS mapping is an \textit{en masse} functional assay that 
 \section{Methods}
 
 \subsection{DMS-TileSeq}
-The DMS-TileSeq experiment for \gene{SUMO1}, \gene{TPK1}, \gene{NCS1}, and \gene{CALM1} was performed by Song Sun and Marta Verby as described in chapter~\ref{ch:data1}. The downstream sequencing data analysis, scoring, imputation and regularization was performed by me as described in chapter~\ref{ch:data1}.
+The DMS-TileSeq experiment for \gene{SUMO1}, \gene{TPK1}, \gene{NCS1}, and \gene{CALM1} was performed by Song Sun and Marta Verby as described in chapter~\ref{ch:data1}. The mutant alleles for the yeast temperature sensitive strains used were \textit{smt3-331}, \textit{thi80-ph}, \textit{frq1-1} and \textit{cmd1-1}. The downstream sequencing data analysis, scoring, imputation and regularization was performed by me as described in chapter~\ref{ch:data1}.
 
 \subsection{DMS-BarSeq Y2H}
 The DMS-BarSeq Y2H experiment was performed by Jennifer Knapp as described in chapter~\ref{ch:data1}, except for the following differences: (1) The \textit{en~masse} LR cloning of the UBE2I variant library was targeted into barcoded Y2H AD vectors; (2) Following KiloSeq and re-arraying, the library was pooled and transformed into haploid MATa yeast strains and mated with MAT$\alpha$ strains carrying SATB1-DB plasmids. Following diploid selection, the pool was grown for 48h in triplicates on Histidine-supplemented (permissive) and Histidine-deficient (selective) media, respectively. Plates were scraped and barcode loci amplified for BarSEQ.
