--- a/thesis.bib
+++ b/thesis.bib
@@ -1617,7 +1617,7 @@ How disease-associated mutations impair protein activities in the context of bio
 	month = oct,
 	year = {2010},
 	pages = {1782--1790},
-	file = {Snapshot:/home/jweile/.zotero/zotero/40mw2hl1.default/zotero/storage/E2HRCE35/c0mb00061b.html:text/html}
+	file = {Ernst et al. - 2010 - Coevolution of PDZ domain–ligand interactions anal.pdf:/home/jweile/.zotero/zotero/40mw2hl1.default/zotero/storage/I757I9CD/Ernst et al. - 2010 - Coevolution of PDZ domain–ligand interactions anal.pdf:application/pdf;Snapshot:/home/jweile/.zotero/zotero/40mw2hl1.default/zotero/storage/E2HRCE35/c0mb00061b.html:text/html}
 }
 
 @incollection{forbes_cosmic:_2001,
@@ -2271,7 +2271,7 @@ Genes in the same pathway can retain their function in organisms separated by a 
 	year = {2013},
 	keywords = {fitness, function, sequence, structure, thermodynamic stability},
 	pages = {1363--1377},
-	file = {ScienceDirect Snapshot:/home/jweile/.zotero/zotero/40mw2hl1.default/zotero/storage/AZKTTV64/S0022283613000636.html:text/html}
+	file = {Roscoe et al. - 2013 - Analyses of the Effects of All Ubiquitin Point Mut.pdf:/home/jweile/.zotero/zotero/40mw2hl1.default/zotero/storage/6RHGVP69/Roscoe et al. - 2013 - Analyses of the Effects of All Ubiquitin Point Mut.pdf:application/pdf;ScienceDirect Snapshot:/home/jweile/.zotero/zotero/40mw2hl1.default/zotero/storage/AZKTTV64/S0022283613000636.html:text/html}
 }
 
 @article{aravind_regulatory_2008,
@@ -2813,4 +2813,87 @@ PML and several other proteins localizing in PML-nuclear bodies (PML-NB) contai
 	pmid = {15770033},
 	pages = {pl3--pl3},
 	file = {Full Text PDF:/home/jweile/.zotero/zotero/40mw2hl1.default/zotero/storage/7XGND95G/Iyer et al. - 2005 - Utilizing the Split-Ubiquitin Membrane Yeast Two-H.pdf:application/pdf;Snapshot:/home/jweile/.zotero/zotero/40mw2hl1.default/zotero/storage/JFT3BPVI/pl3.html:text/html}
+}
+
+@article{gibson_enzymatic_2009,
+	title = {Enzymatic assembly of {DNA} molecules up to several hundred kilobases},
+	volume = {6},
+	copyright = {© 2009 Nature Publishing Group},
+	issn = {1548-7091},
+	url = {http://www.nature.com/nmeth/journal/v6/n5/full/nmeth.1318.html},
+	doi = {10.1038/nmeth.1318},
+	abstract = {We describe an isothermal, single-reaction method for assembling multiple overlapping DNA molecules by the concerted action of a 5′ exonuclease, a DNA polymerase and a DNA ligase. First we recessed DNA fragments, yielding single-stranded DNA overhangs that specifically annealed, and then covalently joined them. This assembly method can be used to seamlessly construct synthetic and natural genes, genetic pathways and entire genomes, and could be a useful molecular engineering tool.},
+	language = {en},
+	number = {5},
+	urldate = {2017-05-11},
+	journal = {Nature Methods},
+	author = {Gibson, Daniel G. and Young, Lei and Chuang, Ray-Yuan and Venter, J. Craig and Hutchison, Clyde A. and Smith, Hamilton O.},
+	month = may,
+	year = {2009},
+	pages = {343--345},
+	file = {Snapshot:/home/jweile/.zotero/zotero/40mw2hl1.default/zotero/storage/ISVXWG7J/nmeth.1318.html:text/html}
+}
+
+@article{langmead_fast_2012,
+	title = {Fast gapped-read alignment with {Bowtie} 2},
+	volume = {9},
+	copyright = {© 2012 Nature Publishing Group, a division of Macmillan Publishers Limited. All Rights Reserved.},
+	issn = {1548-7091},
+	url = {http://www.nature.com/nmeth/journal/v9/n4/abs/nmeth.1923.html},
+	doi = {10.1038/nmeth.1923},
+	abstract = {As the rate of sequencing increases, greater throughput is demanded from read aligners. The full-text minute index is often used to make alignment very fast and memory-efficient, but the approach is ill-suited to finding longer, gapped alignments. Bowtie 2 combines the strengths of the full-text minute index with the flexibility and speed of hardware-accelerated dynamic programming algorithms to achieve a combination of high speed, sensitivity and accuracy.},
+	language = {en},
+	number = {4},
+	urldate = {2017-05-11},
+	journal = {Nature Methods},
+	author = {Langmead, Ben and Salzberg, Steven L.},
+	month = apr,
+	year = {2012},
+	keywords = {bioinformatics, Genomics, Sequencing},
+	pages = {357--359},
+	file = {Snapshot:/home/jweile/.zotero/zotero/40mw2hl1.default/zotero/storage/3XPZAA6J/nmeth.1923.html:text/html}
+}
+
+@article{li_sequence_2009,
+	title = {The {Sequence} {Alignment}/{Map} format and {SAMtools}},
+	volume = {25},
+	issn = {1367-4803},
+	url = {https://academic.oup.com/bioinformatics/article/25/16/2078/204688/The-Sequence-Alignment-Map-format-and-SAMtools},
+	doi = {10.1093/bioinformatics/btp352},
+	number = {16},
+	urldate = {2017-05-11},
+	journal = {Bioinformatics},
+	author = {Li, Heng and Handsaker, Bob and Wysoker, Alec and Fennell, Tim and Ruan, Jue and Homer, Nils and Marth, Gabor and Abecasis, Goncalo and Durbin, Richard},
+	month = aug,
+	year = {2009},
+	pages = {2078--2079},
+	file = {Full Text PDF:/home/jweile/.zotero/zotero/40mw2hl1.default/zotero/storage/3NWGZ245/Li et al. - 2009 - The Sequence AlignmentMap format and SAMtools.pdf:application/pdf;Snapshot:/home/jweile/.zotero/zotero/40mw2hl1.default/zotero/storage/3MD66VKI/The-Sequence-Alignment-Map-format-and-SAMtools.html:text/html}
+}
+
+@article{yachie_pooledmatrix_2016,
+	title = {Pooled‐matrix protein interaction screens using {Barcode} {Fusion} {Genetics}},
+	volume = {12},
+	copyright = {© 2016 The Authors. Published under the terms of the CC BY 4.0 license. This is an open access article under the terms of the Creative Commons Attribution 4.0 License, which permits use, distribution and reproduction in any medium, provided the original work is properly cited.},
+	issn = {1744-4292, 1744-4292},
+	url = {http://msb.embopress.org/content/12/4/863},
+	doi = {10.15252/msb.20156660},
+	abstract = {High‐throughput binary protein interaction mapping is continuing to extend our understanding of cellular function and disease mechanisms. However, we remain one or two orders of magnitude away from a complete interaction map for humans and other major model organisms. Completion will require screening at substantially larger scales with many complementary assays, requiring further efficiency gains in proteome‐scale interaction mapping. Here, we report Barcode Fusion Genetics‐Yeast Two‐Hybrid (BFG‐Y2H), by which a full matrix of protein pairs can be screened in a single multiplexed strain pool. BFG‐Y2H uses Cre recombination to fuse DNA barcodes from distinct plasmids, generating chimeric protein‐pair barcodes that can be quantified via next‐generation sequencing. We applied BFG‐Y2H to four different matrices ranging in scale from {\textasciitilde}25 K to 2.5 M protein pairs. The results show that BFG‐Y2H increases the efficiency of protein matrix screening, with quality that is on par with state‐of‐the‐art Y2H methods.
+Synopsis
+
+{\textless}img class="highwire-embed" alt="Embedded Image" src="http://d3dwu2jylmmhzr.cloudfront.net/sites/default/files/highwire/msb/12/4/863/embed/graphic-1.gif"/{\textgreater}
+
+Barcode Fusion Genetics‐Yeast Two‐Hybrid, a new technology allowing many‐by‐many screening of protein interactions in a single pooled assay, is presented. High‐quality interactions are identified in search matrices up to {\textasciitilde}2.5 million protein pairs in scale.
+
+Barcode Fusion Genetics (BFG) enables phenotypic analysis of millions of strains, each carrying two engineered loci.BFG is applied to perform highly multiplexed yeast two‐hybrid protein interaction assays (BFG‐Y2H).Protein interactions for ˜2.5 million protein pairs are tested in a single BFG‐Y2H run.The quality of BFG‐Y2H results is on par with current state‐of‐the‐art Y2H methods.},
+	language = {en},
+	number = {4},
+	urldate = {2017-05-11},
+	journal = {Molecular Systems Biology},
+	author = {Yachie, Nozomu and Petsalaki, Evangelia and Mellor, Joseph C. and Weile, Jochen and Jacob, Yves and Verby, Marta and Ozturk, Sedide B. and Li, Siyang and Cote, Atina G. and Mosca, Roberto and Knapp, Jennifer J. and Ko, Minjeong and Yu, Analyn and Gebbia, Marinella and Sahni, Nidhi and Yi, Song and Tyagi, Tanya and Sheykhkarimli, Dayag and Roth, Jonathan F. and Wong, Cassandra and Musa, Louai and Snider, Jamie and Liu, Yi-Chun and Yu, Haiyuan and Braun, Pascal and Stagljar, Igor and Hao, Tong and Calderwood, Michael A. and Pelletier, Laurence and Aloy, Patrick and Hill, David E. and Vidal, Marc and Roth, Frederick P.},
+	month = apr,
+	year = {2016},
+	pmid = {27107012},
+	keywords = {DNA barcode, interactome, next‐generation sequencing, protein interaction, yeast two‐hybrid},
+	pages = {863},
+	file = {Full Text PDF:/home/jweile/.zotero/zotero/40mw2hl1.default/zotero/storage/9S3DDZ4G/Yachie et al. - 2016 - Pooled‐matrix protein interaction screens using Ba.pdf:application/pdf;Snapshot:/home/jweile/.zotero/zotero/40mw2hl1.default/zotero/storage/Q7X7Q3FH/863.html:text/html}
 }
