--- a/thesis.bib
+++ b/thesis.bib
@@ -737,7 +737,7 @@ Genome-editing technology allows improved positive or negative selection screens
 }
 
 @article{baldi_bayesian_2001,
-	title = {A {Bayesian} framework for the analysis of microarray expression data: regularized t -test and statistical inferences of gene changes},
+	title = {A {Bayesian} framework for the analysis of microarray expression data: regularized t-test and statistical inferences of gene changes},
 	volume = {17},
 	issn = {1367-4803},
 	shorttitle = {A {Bayesian} framework for the analysis of microarray expression data},
@@ -2896,4 +2896,27 @@ Barcode Fusion Genetics (BFG) enables phenotypic analysis of millions of strains
 	keywords = {DNA barcode, interactome, next‐generation sequencing, protein interaction, yeast two‐hybrid},
 	pages = {863},
 	file = {Full Text PDF:/home/jweile/.zotero/zotero/40mw2hl1.default/zotero/storage/9S3DDZ4G/Yachie et al. - 2016 - Pooled‐matrix protein interaction screens using Ba.pdf:application/pdf;Snapshot:/home/jweile/.zotero/zotero/40mw2hl1.default/zotero/storage/Q7X7Q3FH/863.html:text/html}
+}
+
+@misc{kossin_thermometer_2004,
+	title = {Thermometer icon, {Wikimedia} {Commons}},
+	copyright = {CC-BY-SA},
+	url = {https://commons.wikimedia.org/wiki/File:Thermometer_green.svg},
+	author = {Kossin, Michael},
+	year = {2004}
+}
+
+@misc{bons_computer_2005,
+	title = {Computer icon, {The} {Tango} {Project}},
+	copyright = {CC-BY-SA},
+	url = {https://commons.wikimedia.org/wiki/File:Computer.svg},
+	author = {Bons, Hylke and Calamandrei, Lapo and Charavel, Olivier and Collier, Ryan and Dawes, Rodney and Depizzol, Vinicius and Garrity, Steven and Kuosmanen, Tuomas and LeSage, Garret and Mirthes, Niko and Navarro, Jesus D and Nilsson, Andreas and Persson, Kalle and Steiner, Jakub and Vybiral, Josef},
+	year = {2005}
+}
+
+@misc{pire_stack_2012,
+	title = {Stack of sixty three 96-well microtiter plates on a white background},
+	url = {http://thedude.com/wp-content/uploads/2012/01/microtiter-platex21x3_gold.png},
+	author = {Pire, Jim},
+	year = {2012}
 }
