--- a/chapter1.tex
+++ b/chapter1.tex
@@ -50,7 +50,7 @@ This method scales up a previously described method developed by Seyfang~\etal~\
 When designing a set of suitable oligonucleotide sequences, two important criteria need to be considered: 
 (i) The melting temperature across the complete set must be as uniform as possible as this will ensure a more even mutation rate across the ORF sequence; (ii) the degenerate codon sequence should be located as close to the centre of the oligo as permissible given the first criterium. To simplify the process of choosing an appropriate set of oligos based on these criteria, I developed a web tool that can be used to calculate the optimal solution to the given problem. The tool requires the sequence of the target ORF and flanking vector sequences, a desired average oligo length and a maximum offset parameter. The offset parameter determines how many bases can be maximally added or removed from each side of a given oligo to optimize its melting temperature. 
 
-In some cases, a moderate deviation from the average in melting temperature for some oligos cannot be avoided. To alleviate these effects, the web tool also offers a mutation rate prediction. This is based on observations from all the POPCode procedures performed as part of this work in combination with linear regression. The prediction can be used to preemptivly adjust concentrations of potentially troublesome oligos in the POPCode protocol. An additional feature in the tool, also based on the mutation rate prediction, is the automatic calculation of necessary library size to achieve a desired mutational coverage. The web tool as available at \verb|http://llama.mshri.on.ca/cgi/popcodeSuite/main|.
+In some cases, a moderate deviation from the average in melting temperature for some oligos cannot be avoided. To alleviate these effects, the web tool also offers a mutation rate prediction. This is based on observations from all the POPCode procedures performed as part of this work in combination with linear regression. The prediction can be used to preemptivly adjust concentrations of potentially troublesome oligos in the POPCode protocol. An additional feature in the tool, also based on the mutation rate prediction, is the automatic calculation of necessary library size to achieve a desired mutational coverage. The webtool is available online\footnote{\url{http://llama.mshri.on.ca/cgi/popcodeSuite/main}}.
 
 %%Figure: PopCode schema
 
@@ -117,7 +117,7 @@ Using a pinning robot, we re-arrayed the subset of usable clones into a condense
 \subsubsection{Complementation screen and Barcode sequencing}
 
 For Stage 3 of the DMS-BarSeq framework---the selection of clones encoding a functional protein---we employed a previously described \species{S.~cerevisiae} functional complementation assay~\cite{lee_complementation_1987,osborn_rescuing_2007}. This assay is based a yeast strain carrying a temperature sensitive (ts) allele of the \gene{UBE2I} orthologue \gene{UBC9}. Expression of human \gene{UBE2I} rescues growth at an otherwise lethal elevated temperature. As such, the fitness observed for a clone carrying a mutant allele of \gene{UBE2I} can be interpreted as the overall ability of the variant protein to function within its biological context~\cite{sun_extended_2016}. 
-The plasmid library from Stage 3 was introduced into the appropriate ts strain by en-masse transformation. Pools were then grown in triplicates over a period of 48 hours at the permissive (25\celsius ) and selective (37\celsius ) temperatures, respectively (see Online Methods) and evaluated at multiple time points via high-throughput sequencing.
+The plasmid library from Stage 3 was introduced into the appropriate ts strain by en-masse transformation. Pools were then grown in triplicates over a period of 48 hours at the permissive (25\celsius ) and selective (37\celsius ) temperatures, respectively (see Methods) and evaluated at multiple time points via high-throughput sequencing.
 
 To facilitate the readout of the selection (Stage 4), I developed a sequence analysis pipeline. The pipeline distributes sets of read pairs across across the nodes of a high-performance computing cluster, where a k-mer search algorithm is used to identify multiplexing tags that encode the temperature and time point and replicate number associated with the sample. The same algorithm is also used to identify the barcode itself. The number of occurrences of each barcode in each sample is counted and aggregated across the cluster nodes. The frequencies at which each barcode is observed corresponds to the population size of the associated clone. This can then be used to reconstruct of individual growth curves and quantify the normalized fitness for each of the 6,553 strains (see Methods section for details). The fitness measurements are normalized to the wildtype and null controls, such that a score of 1 is equivalent to the average wildtype fitness, and 0 is equivalent to the average null control fitness.
 
